# ewok

./: CHANGELOG.md  README.md  pyproject.toml
src/ewok/: cli.py  core.py  monkey.py
