[project]
name = "ewok"
version = "0.1.0"
description = "Education Warehouse Octopus Kit - Extensible CLI framework with plugin support"
readme = "README.md"
authors = [
    { name = "Robin van der Noord", email = "robin.vdn@educationwarehouse.nl" },
    { name = "Remco Boerma", email = "remco.b@educationwarehouse.nl" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"
